<resources>
    <string name="app_name">X Shielder</string>
    <string name="activitySettings_title">Settings</string>
    <string name="activityPermissions_title">Permissions</string>
    <string name="activityAcknowledgements_title">Acknowledgements</string>
    <string name="activityMalware_shortTitle">Anti-malware</string>
    <string name="activityMalware_title">Anti-malware shield</string>
    <string name="activityWifi_shortTitle">Wi-Fi security</string>
    <string name="activityWifi_title">Wi-Fi security shield</string>
    <string name="dialoguePermissionWarning_title">Insufficient permission</string>
    <string name="dialogueScanStopConfirmation_title">Stop scanning?</string>
    <string name="dialogueScanStopConfirmation_positiveText">Stop</string>
    <string name="dialogueIssueDisregardConfirmation_title">Disregard issues?</string>
    <string name="dialogueIssueDisregardConfirmation_positiveText">Disregard</string>
    <string name="dialogue_defaultPositiveText">OK</string>
    <string name="dialogue_defaultNegativeText">Cancel</string>
    <string name="filePickerDialogue_defaultSubtitle_singular">file in total</string>
    <string name="filePickerDialogue_defaultSubtitle_plural">files in total</string>
    <string name="menuSettings_hint">Settings</string>
    <string name="textViewRationale_pass">Everything looks good.</string>
    <string name="textViewRationale_unknown_appError">Something wrong. Please retry the scan later, or relaunch the app, or send feedback.</string>
    <string name="toastOpeningLinkFailed">It seems that there is no suitable browser to open the link.</string>
    <string name="roundButtonAction_normal">Rescan</string>
    <string name="roundButtonAction_unknown">Retry</string>
    <string name="unknownInfo">Unknown</string>
    <string name="home_appManager_title">App manager</string>
    <string name="home_systemUpdate_title">System update</string>
    <string name="home_toastSystemUpdate">It seems that there is no system update screen.</string>
    <string name="settings_preferenceCategoryLogs_title">LOGS</string>
    <string name="settings_switchPreferenceEnablingLogging_title">Enable logging</string>
    <string name="settings_dialogueDisableLoggingConfirmation_title">Disable logging?</string>
    <string name="settings_dialogueDisableLoggingConfirmation_content">Logging will be disabled if you click the confirmation button which is not recommended because log files help to provide a better user experience.</string>
    <string name="settings_dialogueDisableLoggingConfirmation_positiveText">Disable</string>
    <string name="settings_dialoguePermissionWarning_content">
        Due to security concerns, storage access is required to view log files.\n
        \nThis app never collects any sensitive user data.</string>
    <string name="settings_preferenceViewingLogFiles_title">View log files</string>
    <string name="settings_preferenceViewingLogFiles_summary_existed">Location:&#160;</string>
    <string name="settings_preferenceViewingLogFiles_summary_none">No log files</string>
    <string name="settings_toastViewingLogFilesFailed">It seems that there is no suitable app to view the log file.</string>
    <string name="settings_preferenceClearingLogFiles_title">Clear log files</string>
    <string name="settings_preferenceClearingLogFiles_summary">Log files persisting for over 7 days will be auto-cleared when the app is opened</string>
    <string name="settings_dialogueClearingLogFilesConfirmation_title">Clear all log files?</string>
    <string name="settings_dialogueClearingLogFilesConfirmation_content">Log files will be cleared if you click the confirmation button. It is recommended to send feedback before clearing them.</string>
    <string name="settings_dialogueClearingLogFilesConfirmation_positiveText">Clear</string>
    <string name="settings_toastLogFilesCleared">Successfully cleared all log files.</string>
    <string name="settings_preferenceCategoryOthers_title">OTHERS</string>
    <string name="settings_preferenceAboutApp_title">About the app</string>
    <string name="settings_preferenceAboutApp_summary_line1">App version:&#160;</string>
    <string name="settings_preferenceAboutApp_summary_line2">Anti-malware engine version:&#160;</string>
    <string name="settings_dialogueAboutApp_title">About&#160;</string>
    <string name="settings_dialogueAboutApp_content_part1">
        &#169; 2020 Arvin Zhao\n
        \nThis app is a \"shielder\" and it has 2 \"shields\" as the main functionality focusing on scanning for security threads. It provides basic protection for
        mobile devices running from Android 6 (M) to Android 10 (Q).\n
        \nThe anti-malware shield scans installed third-party apps for malware. After scanning, it will show the final result and an app list. Apps can be
        uninstalled according to the user\'s choice.\n
        \nThe Wi-Fi security shield scans the connected Wi-Fi for any potential security threads. After scanning, it will list results and provide an info list of
        the connected Wi-Fi. It basically tells the user how to handle the security issues.\n
        \nThe app also provides links to the app list screen and the system update screen to assist the user to manage apps and their permissions and to update the
        system in time.\n
        \nDeveloped for academic study, the app is&#160;
    </string>
    <string name="settings_dialogueAboutApp_content_part2">open-source</string>
    <string name="settings_dialogueAboutApp_content_part3">. It should never be used for any commercial purposes.</string>
    <string name="settings_preferencePermissions_title">Permissions</string>
    <string name="settings_preferenceSendingFeedback_title">Send feedback</string>
    <string name="settings_toastOpeningMailFailed">It seems that there is no suitable mail app to send feedback.</string>
    <string name="permissions_textViewSection1_header">About Android Permissions</string>
    <string name="permissions_textViewSection1_content">
        Android permissions are designed to protect the privacy of a user. A central design point of the Android security architecture is that no app, by default,
        has permissions to perform any operations that would adversely impact other apps, the operating system, or the user. These permissions are divided into
        several protection levels. The two most important levels are normal and dangerous permissions. Depending on the feature, the system might grant the
        permission automatically or might prompt the user to approve the request.
    </string>
    <string name="permissions_textViewSection2_header">Viewing an App\'s Permissions</string>
    <string name="permissions_textViewSection2_content_part1">
        You can view an app\'s permissions currently defined in the system by viewing the specified part of its app details screen. To go to an app details screen,
        a general way is to open the Settings app, click \"Apps\", select an app, and click \"Permissions\". Please note that this may be different
        in various versions of Android and also some third-party ROMs (MIUI, for example). You can click&#160;
    </string>
    <string name="permissions_textViewSection2_content_part2">here</string>
    <string name="permissions_textViewSection2_content_part3">&#160;to go to the app details screen of this app.</string>
    <string name="permissions_textViewSection3_header">How Permissions Are Used in&#160;</string>
    <string name="permissions_textViewSection3_content">It is not easy to understand exactly what you grant a permission for. Required Android permissions and what they mean to you are shown as follows.</string>
    <string name="permissions_textViewLocationAccess_header">Location Access</string>
    <string name="permissions_textViewLocationAccess_content">
        Due to Android limits, location access is required to get accurate network details including the connected Wi-Fi\'s SSID, security type, etc. Without
        location access, the Wi-Fi security shield cannot work properly. Location Services should also be enabled. This app never tracks you, nor does it collect
        your location.
    </string>
    <string name="permissions_textViewStorageAccess_header">Storage Access</string>
    <string name="permissions_textViewStorageAccess_content">
        Due to security concerns, storage access is required to view log files. Without storage access, you cannot view the log file list and open a log file via the
        app\'s settings. The storage access only affects viewing log files. You can still enable logging without it. This app never collects any sensitive user data.
    </string>
    <string name="malware_textViewScanNotice">The scan may take a long time.</string>
    <string name="malware_dialogueScanStopConfirmation_content">The app will stop scanning for malware if you click the confirmation button when the scan is not completed.</string>
    <string name="malware_dialogueIssueDisregardConfirmation_content">The app will take no action on malware if you click the confirmation button which is not recommended.</string>
    <string name="malware_dialogueAllSystemApps_title">Lack of third-party apps</string>
    <string name="malware_dialogueAllSystemApps_content">Except this app, all installed apps are system apps. Please install some third-party apps to scan for malware.</string>
    <string name="malware_textViewRationale_fail">Malware detected! Please uninstall malware as soon as possible.</string>
    <string name="malware_appList_discription">Click an item to uninstall the corresponding app. System apps which generally cannot be completely uninstalled are not scanned.</string>
    <string name="malware_malwareList_title">MALWARE (</string>
    <string name="malware_unknownAppList_title">UNKNOWN APPS (</string>
    <string name="malware_benignAppList_title">BENIGN APPS (</string>
    <string name="malware_toastAppNotFound">&#160;might have been uninstalled.</string>
    <string name="malware_roundButtonAction_fail">Uninstall malware</string>
    <string name="wifi_dialoguePermissionWarning_content">
        Due to Android limits, location access is required to get accurate network details.\n
        \nThis app never tracks you, nor does it collect your location.</string>
    <string name="wifi_dialogueLocationServicesStatusWarning_title">Enable Location Services?</string>
    <string name="wifi_dialogueLocationServicesStatusWarning_content">Due to Android limits, Location Services is required to be enabled to get accurate network details.</string>
    <string name="wifi_dialogueLocationServicesStatusWarning_positiveText">Enable</string>
    <string name="wifi_dialogueScanStopConfirmation_content">The app will stop checking Wi-Fi security if you click the confirmation button when the scan is not completed.</string>
    <string name="wifi_dialogueIssueDisregardConfirmation_content">The app will take no action on the connected Wi-Fi if you click the confirmation button which is not recommended.</string>
    <string name="wifi_textViewRationale_fail_default">Unsecured Wi-Fi. Please disconnect it or connect to another Wi-Fi network.</string>
    <string name="wifi_textViewRationale_fail_connectivity">No Internet connection. Please check your Wi-Fi network.</string>
    <string name="wifi_textViewRationale_unknown_connectivity">No connected Wi-Fi. Please connect to Wi-Fi first.</string>
    <string name="wifi_checklist_title">CHECKLIST</string>
    <string name="wifi_checklist_securityType">Secured encrypted Wi-Fi</string>
    <string name="wifi_checklist_connectivity">Internet connection</string>
    <string name="wifi_checklist_dns">DNS security</string>
    <string name="wifi_checklist_ssl">SSL security</string>
    <string name="wifi_info_title">NETWORK DETAILS</string>
    <string name="wifi_info_description">Long press an item to copy valid text</string>
</resources>