<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityHome">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.ActionBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayoutHome"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:minHeight="?attr/actionBarSize"
            app:contentScrim="@color/app_themeColour"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <!-- the attribute fitsSystemWindows needs setting to false to avoid any abnormal text view styles -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarHome"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="false"
                android:paddingStart="@dimen/medium_interval"
                android:paddingEnd="@dimen/medium_interval"
                android:theme="@style/AppTheme.ActionBarOverlay"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title=" ">

                <TextView
                    android:id="@+id/textViewAppName"
                    style="@style/ToolbarTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- the attribute fitsSystemWindows needs setting to "false" to avoid an issue that padding (set programmatically) has no effect on some devices -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            android:layout_marginBottom="@dimen/default_margin">

            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
                android:id="@+id/superButtonMalware"
                style="@style/SuperButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMalware_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
                android:id="@+id/superButtonWifi"
                style="@style/SuperButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityWifi_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/superButtonMalware" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>